operatorize